attached_assets/Pasted--ztatlmzd-hostingssd108-heartsissi-lumii-it-ls-heartsis_1781210369030.txt
[ztatlmzd@hostingssd108 heartsissi.lumii.it]$ ls ~/heartsissi.lumii.it/lumii-app/node_modules >/dev/null 2>&1 && echo "MODULI OK" || echo "MANCA: fai Run NPM Install"
MODULI OK
[ztatlmzd@hostingssd108 heartsissi.lumii.it]$ find ~/heartsissi.lumii.it -maxdepth 3 -name "stderr.log" -exec tail -n 40 {} \;
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:51:15)
    at Object.<anonymous> (/usr/local/lsws/fcgi-bin/lsnode.js:16:1)
    at Module._compile (internal/modules/cjs/loader.js:778:30)
/home/ztatlmzd/heartsissi.lumii.it/lumii-app/server.js:3
import "./server/index.mjs";
       ^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:51:15)
    at Object.<anonymous> (/usr/local/lsws/fcgi-bin/lsnode.js:16:1)
    at Module._compile (internal/modules/cjs/loader.js:778:30)
/home/ztatlmzd/heartsissi.lumii.it/lumii-app/server.js:3
import "./server/index.mjs";
       ^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:51:15)
    at Object.<anonymous> (/usr/local/lsws/fcgi-bin/lsnode.js:16:1)
    at Module._compile (internal/modules/cjs/loader.js:778:30)
[ztatlmzd@hostingssd108 heartsissi.lumii.it]$